# pepper

./: README.md  implementation_status.md  pyproject.toml  requirements.txt  要件定義.md
src/: __init__.py  main.py
src/config/: __init__.py  config.py
src/flask_server/: __init__.py  flask_server.py  model_utils.py
src/pepper_client/: __init__.py  pepper_client.py
src/utils/: __init__.py  audio_utils.py  http_utils.py
test/: README.md  __init__.py  run_tests.py  test_audio_utils.py  test_chat_endpoint.py  test_flask_server.py  test_http_utils.py  test_model_utils.py  test_pepper_client.py
