[project]
name = "pepper"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.7.0",
    "fastapi>=0.115.12",
    "flask>=3.1.1",
    "python-dotenv>=1.1.0",
    "torch>=2.7.0",
    "transformers>=4.52.3",
    "uvicorn>=0.34.2",
    "wave",
]
[tool.uv.sources]
wave = { path = "../../../Downloads/Wave-0.0.2.zip" }
